--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -24,5 +24,14 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}
+        
+    - name: upload to s3
+
+      uses: actions/download-artifact@v2.1.1
+      with:
+      # Destination path
+        name: s3buckets.cvs
+        path: .
+          
 
 
