--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,37 +1,23 @@
-
-name: Deploy to Amazon ECS
+name: Upload Website to s3
 
 on:
   push:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
+    branches:
+    - master
 
 jobs:
   deploy:
-    name: Deploy
     runs-on: ubuntu-latest
-    environment: production
-
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v1
 
-    - name: Configure AWS credentials
+    - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
-        
-    - name: upload to s3
 
-      uses: actions/download-artifact@v2.1.1
-      with:
-      # Destination path
-        name: s3buckets.cvs
-        path: .
-          
-
-
+    - name: Deploy static site to S3 bucket
+      run: aws s3 sync ./public/ s3://BUCKET_NAME --delete
