--- a/.github/workflows/s3bucket.yml
+++ b/.github/workflows/s3bucket.yml
@@ -19,5 +19,40 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
 
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+
+    - name: Create S3 Bucket
+      run: |
+          aws s3api create-bucket \
+            --bucket primuslearning-githubactions-website \
+            --region us-east-1 \
+            --create-bucket-configuration LocationConstraint=us-east-1
+
+    - name: Set Bucket Policy
+      run: |
+          aws s3api put-bucket-policy \
+            --bucket primuslearning-githubactions-website \
+            --policy '{
+                "Version": "2012-10-17",
+                "Statement": [
+                    {
+                        "Sid": "PublicReadGetObject",
+                        "Effect": "Allow",
+                        "Principal": "*",
+                        "Action": [
+                            "s3:GetObject"
+                        ],
+                        "Resource": [
+                            "arn:aws:s3:::primuslearning-githubactions-website/*"
+                        ]
+                    }
+                ]
+            }'
+
+    - name: Display Website URL
+      run: |
+          echo "Your website is hosted at http://primuslearning-githubactions-website.s3-website-us-east-1.amazonaws.com"
+
     - name: Deploy static site to S3 bucket
       run: aws s3 sync ./public/ s3://primuslearning-githubactions-website --delete
