--- a/.github/workflows/s3bucket.yml
+++ b/.github/workflows/s3bucket.yml
@@ -45,8 +45,8 @@ jobs:
                         "Effect": "Allow",
                         "Principal": "*",
                         "Action": [
-                            "s3:GetObject",
-                            "s3:PutBucketPolicy"
+                            "s3:GetObject"
+                        
                         ],
                         "Resource": [
                             "arn:aws:s3:::primuslearning-githubactions-website/*"
