--- a/.github/workflows/s3bucket.yml
+++ b/.github/workflows/s3bucket.yml
@@ -38,22 +38,27 @@ jobs:
           aws s3api put-bucket-policy \
             --bucket primuslearning-githubactions-website \
             --policy '{
-                "Version": "2012-10-17",
-                "Statement": [
-                    {
-                        "Sid": "PublicReadGetObject",
-                        "Effect": "Allow",
-                        "Principal": "*",
-                        "Action": [
-                            "s3:GetObject"
-                        
-                        ],
-                        "Resource": [
-                            "arn:aws:s3:::primuslearning-githubactions-website/*"
-                        ]
-                    }
-                ]
-            }'
+    "Version": "2012-10-17",
+    "Id": "PublicReadGetObject",
+    "Statement": [
+        {
+            "Sid": "PublicReadGetObject",
+            "Effect": "Allow",
+            "Principal": {
+                "AWS": "arn:aws:iam::215318908877:user/github-actions"
+            },
+            "Action": [
+                "s3:GetObject",
+                "s3:GetBucketLocation",
+                "s3:ListBucket"
+            ],
+            "Resource": [
+                "arn:aws:s3:::primuslearning-githubactions-website/*",
+                "arn:aws:s3:::primuslearning-githubactions-website"
+            ]
+        }
+    ]
+}'
 
     - name: Display Website URL
       run: |
