--- a/.github/workflows/s3bucket.yml
+++ b/.github/workflows/s3bucket.yml
@@ -50,6 +50,7 @@ jobs:
             "Action": [
                 "s3:GetObject",
                 "s3:GetBucketLocation",
+                "s3:PutObjectAcl",
                 "s3:ListBucket"
             ],
             "Resource": [
