--- a/.github/workflows/s3bucket.yml
+++ b/.github/workflows/s3bucket.yml
@@ -37,9 +37,7 @@ jobs:
               {
                 "Sid": "PublicReadGetObject",
                 "Effect": "Allow",
-                "Principal": {
-                  "AWS": "arn:aws:iam::215318908877:user/github-actions"
-                },
+                "Principal": "*",
                 "Action": [
                   "s3:GetObject",
                   "s3:GetBucketLocation",
