--- a/.github/workflows/s3bucket.yml
+++ b/.github/workflows/s3bucket.yml
@@ -79,4 +79,4 @@ jobs:
           echo "Your website is hosted at http://primuslearning-githubactions-website.s3-website-us-east-1.amazonaws.com"
 
     - name: Deploy static site to S3 bucket
-      run: aws s3 sync ./public/ s3://primuslearning-githubactions-website --delete
+      run: aws s3 sync ./ s3://primuslearning-githubactions-website --delete
