--- a/.github/workflows/s3bucket.yml
+++ b/.github/workflows/s3bucket.yml
@@ -40,16 +40,18 @@ jobs:
             "Version": "2012-10-17",
             "Id": "PublicReadGetObject",
             "Statement": [
-            {
-            "Sid": "PublicReadGetObject",
-            "Effect": "Allow",
-            "Principal":{
+              {
                 "Sid": "PublicReadGetObject",
                 "Effect": "Allow",
                 "Principal": {
                   "AWS": "arn:aws:iam::215318908877:user/github-actions"
                 },
-            ],
+                "Action": [
+                  "s3:GetObject",
+                  "s3:GetBucketLocation",
+                  "s3:PutObjectAcl",
+                  "s3:ListBucket"
+                ],
             "Resource": [
                 "arn:aws:s3:::primuslearning-githubactions-website/*",
                 "arn:aws:s3:::primuslearning-githubactions-website"
