--- a/.github/workflows/s3bucket.yml
+++ b/.github/workflows/s3bucket.yml
@@ -1,69 +1,39 @@
 on:
   push:
     branches:
-    - main
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-    - name: Checkout
-      uses: actions/checkout@v1
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
 
-    - name: Checkout Repository
-      uses: actions/checkout@v2
-
-    - name: Create S3 Bucket
-      run: |
+      - name: Create S3 Bucket
+        run: |
           aws s3api create-bucket \
             --bucket primuslearning-githubactions-website \
-            --region us-east-1 \
-            
-    - name: Create 'public' Folder
-      run: |
-          aws s3api put-object \
-            --bucket primuslearning-githubactions-website \
-            --key public/
+            --region us-east-1
 
-    - name: Set Bucket Policy
-      run: |
-          aws s3api put-bucket-policy \
+      - name: Make Bucket Public
+        run: |
+          aws s3api put-bucket-acl \
             --bucket primuslearning-githubactions-website \
-            --policy '{
-            "Version": "2012-10-17",
-            "Id": "PublicReadGetObject",
-            "Statement": [
-              {
-                "Sid": "PublicReadGetObject",
-                "Effect": "Allow",
-                "Principal": {
-                  "AWS": "arn:aws:iam::215318908877:user/github-actions"
-                },
-                "Action": [
-                  "s3:GetObject",
-                  "s3:GetBucketLocation",
-                  "s3:PutObjectAcl",
-                  "s3:ListBucket"
-                ],
-            "Resource": [
-                "arn:aws:s3:::primuslearning-githubactions-website/*",
-                "arn:aws:s3:::primuslearning-githubactions-website"
-            ]
-            }
-                        ]
-            }'
+            --acl public-read
 
-    - name: Configure S3 Website
-      run: |
+      - name: Configure S3 Website
+        run: |
           aws s3api put-bucket-website \
-            --bucket primuslearning-githubactions-website\
+            --bucket primuslearning-githubactions-website \
             --website-configuration '{
                 "IndexDocument": {
                     "Suffix": "index.html"
@@ -73,10 +43,10 @@ jobs:
                 }
             }'
 
-
-    - name: Display Website URL
-      run: |
+      - name: Display Website URL
+        run: |
           echo "Your website is hosted at http://primuslearning-githubactions-website.s3-website-us-east-1.amazonaws.com"
 
-    - name: Deploy static site to S3 bucket
-      run: aws s3 sync ./ s3://primuslearning-githubactions-website --delete
+      - name: Deploy static site to S3 bucket
+        run: |
+          aws s3 sync ./ s3://primuslearning-githubactions-website --delete
