--- a/.github/workflows/s3bucket.yml
+++ b/.github/workflows/s3bucket.yml
@@ -60,4 +60,4 @@ jobs:
 
       - name: Deploy static site to S3 bucket
         run: |
-          aws s3 sync ./ s3://primuslearning-github-actions-website --delete
+          aws s3 sync ./public/ s3://primuslearning-github-actions-website --delete
