--- a/.github/workflows/s3bucket.yml
+++ b/.github/workflows/s3bucket.yml
@@ -22,8 +22,7 @@ jobs:
         run: |
           aws s3api create-bucket \
             --bucket primuslearning-github-actions-website \
-            --region us-east-1 \
-            --create-bucket-configuration LocationConstraint=us-east-1
+            --region us-east-1
 
           aws s3api put-public-access-block \
             --bucket primuslearning-github-actions-website \
