--- a/.github/workflows/s3bucket.yml
+++ b/.github/workflows/s3bucket.yml
@@ -26,7 +26,7 @@ jobs:
 
           aws s3api put-public-access-block \
             --bucket primuslearning-github-actions-website \
-            --public-access-block-configuration "BlockPublicAcls=true,IgnorePublicAcls=true,BlockPublicPolicy=true,RestrictPublicBuckets=true"
+            --public-access-block-configuration "BlockPublicAcls=false,IgnorePublicAcls=false,BlockPublicPolicy=false,RestrictPublicBuckets=false"
 
           aws s3api put-bucket-website \
             --bucket primuslearning-github-actions-website \
